--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -3,3 +3,7 @@ $grey : #ccc;
 $height : 100px;
 $red : #990000;
 $black : #333;
+
+$confirm: hsla(101, 72%, 37%, 1);  // Green
+$warning: #ffc53a;                 // Yellow
+$alert: rgb(172, 34, 34);
